# GastownUI

./: .gitignore  CLAUDE.md  LAUNCH.md  README.md  package-lock.json  package.json  state.json  vite.config.ts
.beads/: issues.jsonl
.beads/formulas/: gastownui-feature.formula.toml
.claude/: settings.json
.claude/commands/: verify-ui.md
.github/workflows/: README.md  android-release.yml  build-macos-dmg.yml  ci.yml  linux-release.yml
docs/: FTUE-v2.md  FTUE.md  GastownUI-ROADMAP1.md  LAUNCH.md  PRD.md  WINDOWS_INSTALL.md  ios-release.md
docs/archive/: INVESTIGATION-browser-tmux.md
fastlane/: Appfile  Fastfile
models/: README.md
scripts/: build-app-store.sh  build-dmg.sh  generate-android-keystore.sh  generate-ftue-voice.ts  verify-ui.ts
src/: routeTree.gen.ts  router.tsx  styles.css
src-tauri/: Cargo.toml  ExportOptions-AppStore.plist  android-signing.gradle.template  entitlements.mac-app-store.plist  entitlements.plist  tauri.conf.json
src-tauri/src/: chunked_download.rs  events.rs  gastown.rs  instruct.rs  lib.rs  main.rs  self_test.rs  setup.rs  vision.rs  voice.rs
src/__tests__/: setup.test.ts
src/components/: AccessibleButton.tsx  ActivityFeed.tsx  AudioCapture.tsx  AudioSettings.tsx  BeadsInstallPanel.tsx  ColorBlindSettings.tsx  CommandPalette.tsx  CostAlerts.tsx  DeepQueryPanel.tsx  DesignCanvas.tsx  Header.tsx  MoleculeVisualizer.tsx  OfflineIndicator.tsx  QuickCreateModal.tsx  RigComparisonView.tsx  SelfTestPanel.tsx  SetupBanner.tsx  SetupWizard.tsx  SetupWizardV2.tsx  SkipLink.tsx  StepPalette.tsx  TerminalPreview.tsx  ThemeToggle.tsx  TmuxPanel.tsx  VariableBindingPanel.tsx  VoiceControlOverlay.tsx  VoiceErrorPanel.tsx  VoiceGasTown.tsx  VoiceHistoryPanel.tsx  VoiceInterface.tsx  VoiceModelSetup.tsx  XtermTerminal.tsx
src/contexts/: CalmModeContext.tsx  FTUEContext.tsx  SidebarModeContext.tsx  SimplifyModeContext.tsx
src/ftue/: audio.ts  detection.ts  index.ts  music.ts  reducer.ts  types.ts  useFTUEAudioManager.ts  (+4 more)
(+125 files in other folders)
