[package]
name = "gastownui"
version = "0.1.0"
description = "Cross-platform GUI for Gas Town agent orchestration"
authors = ["Gas Town"]
license = "MIT"
repository = "https://github.com/txgsync/gastownui"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "gastownui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.4", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["time"] }
dirs = "5.0"
base64 = "0.22"
notify = { version = "6.1", default-features = false, features = ["macos_fsevent"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-opener = "2"
